# loanrisk

./: README.md  app.py  client.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  risk_model.py
frontend/: app.js  index.html  style.css
server/: app.py
